scroll overflow fix

--- a/css/styles.css
+++ b/css/styles.css
@@ -226,28 +226,28 @@ nav.upper-navbar {
 }
 
 .star-1 {
-    height: 0.6rem;
-    width:  0.6rem;
-}
-
-.star-2 {
     height: 0.5rem;
     width:  0.5rem;
 }
 
+.star-2 {
+    height: 0.42rem;
+    width:  0.42rem;
+}
+
 .star-3 {
-    height: 0.4rem;
-    width:  0.4rem;
+    height: 0.34rem;
+    width:  0.34rem;
 }
 
 .star-4 {
-    height: 0.3rem;
-    width:  0.3rem;
+    height: 0.26rem;
+    width:  0.26rem;
 }
 
 .star-5 {
-    height: 0.2rem;
-    width:  0.2rem;
+    height: 0.18rem;
+    width:  0.18rem;
 }
 
 .star-6 {
